<resources>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="item">ItemString</string>
    <string name="search_icon">Search Icon</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="moreinfoheader">Here comes more info about your item</string>
    <string name="moreinfo">More info\nMore info\nMore info\nMore info\nMore info\nMore info\nMore info\n</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_project_list">ProjectListActivity</string>


    <string name="app_name">Planning</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="settings">Settings</string>




    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_hint"><b>Find project...</b></string>
    <string name="bills">Bills</string>
    <string name="lists">Lists</string>
    <string name="invite">Invite</string>
    <string name="members">3 members going</string>
    <string name="date">Monday, 21.10, 14:00</string>
    <string name="adress">Lazarenka, 40, Lviv, Ukraine</string>
    <string name="project_name">Project Name</string>

</resources>