<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalesReportActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/reports_header_bk"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:paddingTop="15dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_light"
                    android:background="@null"/>

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/whiteTextColor"
                    android:gravity="center"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/headerLayout"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:src="@drawable/ic_party"
                    android:layout_marginBottom="-10dp"/>

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="16dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    style="@style/reportsCardStyle"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/act_main_btn_invite"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/invite"
                            android:gravity="center"
                            android:textStyle="bold|italic"
                            android:textSize="15sp"
                            android:drawableTop="@drawable/ic_invite"
                            android:background="@null"/>
                        <Button
                            android:id="@+id/act_main_btn_lists"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/lists"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textStyle="bold|italic"
                            android:textSize="15sp"
                            android:drawableTop="@drawable/ic_lists"
                            android:background="@null"/>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/bills"
                            android:gravity="center"
                            android:textStyle="bold|italic"
                            android:textSize="15sp"
                            android:drawableTop="@drawable/ic_bills"
                            android:background="@null"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardLayout"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <Button
                        android:id="@+id/ic_members"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/members"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:drawableLeft="@drawable/ic_members"
                        android:background="@null"/>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <Button
                        android:id="@+id/ic_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/date"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:drawableLeft="@drawable/ic_date"
                        android:background="@null"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <Button
                        android:id="@+id/ic_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/adress"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:drawableLeft="@drawable/ic_place"
                        android:background="@null"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
